# bigbang

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  package.xml  qt5.natvis.xml  setup.py
firmware/: firmware.ino  global.cpp  global.h  imu.h  kadyrovlcd.cpp  motor.cpp  motor.h  pinreaderservice.cpp  pinreaderservice.h  servo.cpp  servo.h
include/bigbang/nodes/: costmapservernode.h  monte_carlo.h  nodebase.cpp  nodebase.h  rplidarnode.h
include/bigbang/types/: rosparams.cpp  rosparams.h  serializer.hpp
include/bigbang/utils/: beacons_shape.hpp  particles.hpp  rplidar_utils.cpp  rplidar_utils.h
include/common/: coord.hpp  costmap.hpp  deserialize.hpp  nodebase.hpp  position.hpp
include/costmap/: costmapservernode.hpp
include/global_planer/: cachedgraph.hpp  globalplanernode.hpp
include/lidar/: beacons_shape.hpp  measurement_utils.hpp  rplidar_utils.hpp  rplidarnode.hpp
include/monte_carlo/: measurement_utils.hpp  monte_carlo.hpp  particles.hpp
include/py_lib/: arduino_params.py  arduino_topics.py  rosparams_dataclass.py  task_node.py  tesk_manager_states.py
launch/: arduino.launch  biba_blue_side.launch  biba_blue_skolkovo.launch  biba_green_side.launch  biba_green_skolkovo.launch  boba_blue_side.launch  boba_blue_skolkovo.launch  boba_green_side.launch  boba_green_skolkovo.launch  costmap.launch  global_planer.launch  interconnect.launch  lidar.launch  local_planer.launch  monte_carlo.launch  move_base.launch  robot_model.launch  round_controls.launch  rviz.launch  web_params.launch
msg/: ArduinoCommand.msg  ArduinoLed.msg  ArduinoStatus.msg  LaserBeacon.msg  LaserBeacons.msg  MapObject.msg  Measure2d.msg  MonteCarloState.msg  MotorInfo.msg  MotorParams.msg  Move2d.msg  PinReader.msg  PinReaderResponce.msg  PlanerStatus.msg  RawImu.msg  Reconfigure.msg  ServoCommand.msg  ServoCreateUpdate.msg
nodes/: arduino_interface.py  gui.py  interconnect.py  local_planer.py  scripts_executor.py  task_manager.py
py_lib/: costmap.py  imuimpl.py  json_dict.py  node_base.py  odomimpl.py  requirements.txt  script_types.py
src/: costmapservernode.cpp  globalplanernode.cpp  monte_carlo.cpp  nodebase.cpp  rplidarnode.cpp
srv/: DirectDrift.srv  DirectMove.srv  ExecuteScript.srv
submodule/lidar-sdk/: CMakeLists.txt
submodule/pcg/: CMakeLists.txt
urdf/: opaque.urdf  transparent.urdf
util_scripts/: set_pid.sh
