<?xml version="1.0"?>
<package format="2">
  <name>bigbang_eurobot</name>
  <version>0.0.0</version>
  <description>The bigbang_eurobot package</description>
  <maintainer email="lyosha.doronin@gmail.com">cyanidle</maintainer>
  <license>MIT</license>
  <author email="lyosha.doronin@gmail.com">Alexej Doronin</author>
  
  <build_export_depend>message_generation</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros-noetic-rosbridge-suite</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rosserial_arduino</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ebot_msgs</exec_depend> 
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>debugpy</exec_depend>
  <exec_depend>mergedeep</exec_depend>
  <build_depend>python3-numpy</build_depend>
  <exec_depend>python3-numpy</exec_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <build_depend>python3-pyyaml</build_depend>
  <exec_depend>python3-pyyaml</exec_depend>
  <build_depend>python3-asyncio</build_depend>
  <exec_depend>python3-asyncio</exec_depend>
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>
  <test_depend>gtest</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
